Update configuration files

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Tomo</title>
+<title>Projekt Tomo</title>
 </head>
 <body>
 <script type="text/javascript" >
-  window.open('https://tomo.fmf.uni-lj.si/uvp', '_system');
+  window.open('https://www.projekt-tomo.si', '_system');
 </script>
 </body>
 
