Mobile app update

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script type="text/javascript" >
-  window.open('https://www.projekt-tomo.si', '_system');
+  cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
 </script>
 </body>
 
