Update mobile app

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -1,13 +1,17 @@
  <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Projekt Tomo</title>
-</head>
-<body>
-<script type="text/javascript" >
-  cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
-</script>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <title>Projekt Tomo</title>
+  </head>
+  <body>
+    <script type="text/javascript" >
+      document.addEventListener("deviceready", onDeviceReady, false); 
+      function onDeviceReady() {
+        // Now safe to use the Codova API
+        window.location="https://www.projekt-tomo.si";      
+      }
+      // cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
+    </script>
+  </body>
 </html> 
