Move InAppBrowser call into onDeviceReady event

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -9,9 +9,8 @@
       document.addEventListener("deviceready", onDeviceReady, false); 
       function onDeviceReady() {
         // Now safe to use the Codova API
-        window.location="https://www.projekt-tomo.si";      
+        cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
       }
-      // cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
     </script>
   </body>
 </html> 
