Test mobile app

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -5,12 +5,13 @@
     <title>Projekt Tomo</title>
   </head>
   <body>
+    Test
     <script type="text/javascript" >
       document.addEventListener("deviceready", onDeviceReady, false); 
       function onDeviceReady() {
         // Now safe to use the Codova API
         cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
-      }
+      }d
     </script>
   </body>
 </html> 
