Open web page in new window

--- a/mobile/phonegap/index.html
+++ b/mobile/phonegap/index.html
@@ -10,7 +10,7 @@
       document.addEventListener("deviceready", onDeviceReady, false); 
       function onDeviceReady() {
         // Now safe to use the Codova API
-        cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_self', 'location=no');
+        cordova.InAppBrowser.open('https://www.projekt-tomo.si', '_blank', 'location=no');
       }
     </script>
   </body>
